# gnn-cloud-manufacturing

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml  setup.cfg  setup.py
.dvc/: config
cloudmanufacturing/: conv_layers.py  data.py  data_generation.py  graph copy.py  graph.py  graphconv.py  models.py  validation.py
cloudmanufacturing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cloudmanufacturing/solvers/: mip_solver.py  naive_solver++.py  naive_solver.py
data/: dist.npy  fatahi.xlsx  fatahi_solve.xlsx  op_cost.npy  productivity.npy  time_cost.npy  train_data.xlsx
gnncloudmanufacturing/: data.py  graph.py  graph_model.py  graphconv.py  greedy_algorithm.py  mip_solver.py  random_solution.py  utils.py  validation.py  visualization.py
notebooks/: Data_generation.ipynb  GNN_train.ipynb  check_feasibility.ipynb  delta_0.npy  delta_1.npy  delta_2.npy  develop.ipynb  gamma_0.npy  gamma_1.npy  gnn_definition.ipynb  gnn_solution.ipynb  gnn_solution_ver0.ipynb  gnn_solution_ver1.ipynb  gnn_solution_ver2.ipynb  gnn_solution_ver3.ipynb  gnn_solution_ver4.ipynb  gnn_solution_ver5.ipynb  gnn_ver0.ckpt  gnn_ver1.ckpt  gnn_ver2.ckpt  gnn_ver3.ckpt  gnn_ver4.ckpt  gnn_ver5.ckpt  graph_representation.ipynb  greedy_algorithm.ipynb  mip_solution.ipynb  naive_solution.ipynb  new_test.ipynb  random_solution.ipynb  sample_train_data.ipynb  test_gnn.ipynb  train_gnn_ver0.ipynb  train_gnn_ver1.ipynb  train_gnn_ver2.ipynb  train_gnn_ver3.ipynb  train_gnn_ver4.ipynb  train_gnn_ver5.ipynb  vit.ipynb
src/: data.py  mip_solver.py  validation.py
(+2958 files in other folders)
