[tool.poetry]
name = "cloudmanufacturing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "cloudmanufacturing" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
