[project]
name = 'gnncloudmanufacturing'
version = '0.0.1'
description = 'GNN for cloud manufacturing'
authors = [{name = 'Vitaliy Pozdnyakov, AIRI', email = 'pozdnyakov@airi.net'}]
requires-python = '>=3.10'
dependencies = [
    'pandas>=2.0.3',
    'matplotlib>=3.7.1',
    'torch==2.2.1',
    'torchdata<0.8.0',
    'dgl==2.1.0',
    'lightning>=2.3.2',
    'mip>=1.15.0',
    'numpy>=1.25.2, <2',
    'scikit-learn>=1.5.1',
    'openpyxl>=3.1.5',
    'pydantic',
]

[tool.setuptools]
packages = ['gnncloudmanufacturing']
